# MinesweeperAssistant

./: .gitignore  CMakeLists.txt  README.md  package.sh  计划书.md
docs/: implementation_plan.md
src/: DisplayWindow.cpp  DisplayWindow.h  GameAnalyzer.cpp  GameAnalyzer.h  GameState.h  Logger.cpp  Logger.h  OverlayWindow.cpp  OverlayWindow.h  WindowCapture.cpp  WindowCapture.h  WindowSelector.cpp  WindowSelector.h  main.cpp
